--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <meta property="og:title" content="TEKSYS - AI-Powered Technology Solutions" />
     <meta property="og:description" content="Transform your business with AI-powered IT services, drone solutions, and smart agriculture technologies." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@TEKSYS" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="" />
   </head>
 
   <body>
